# proto-frame-cbor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: conf.py  index.md  quickstart.md
docs/development/: documentation.md  index.md  linters.md  projectmanagement.md  testing.md
docs/framework/: index.md
docs/protocols/: index.md
docs/reference/: frames.md  index.md
src/proto_frame/: __init__.py  frame.py
src/proto_frame/cbor/: __init__.py  frames.py
src/proto_frame/core/: __init__.py  frame.py
tests/: frame_test.py  helloworld_test.py  proto_frame_test.py
